--- a/AuthAPI/appsettings.json
+++ b/AuthAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AuthCon": "Server=(localdb)\\mssqllocaldb;Database=AuthAPI;TrustedConnection=true;"
+  }
 }
