method "register use"

--- a/AuthAPI/appsettings.json
+++ b/AuthAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AuthCon": "Server=(localdb)\\mssqllocaldb;Database=AuthAPI;TrustedConnection=true;"
+    "AuthCon": "Server=(localdb)\\mssqllocaldb;Database=AuthAPI;"
   }
 }
