--- a/AuthAPI/AuthAPI.csproj
+++ b/AuthAPI/AuthAPI.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>8bbf2b48-c5b3-4bb8-98ff-250ef4556339</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
