--- a/AuthAPI/appsettings.json
+++ b/AuthAPI/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "AuthCon": "Server=(localdb)\\mssqllocaldb;Database=AuthAPI;"
-  }
+  "AllowedHosts": "*"
 }
